--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Portugol Online</string>
+    <string name="hello_world">Olá, mundo!</string>
 </resources>
