--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Portugol Online</string>
+    <string name="action_desfazer">Desfazer</string>
     <string name="action_executar">Executar</string>
+    <string name="action_refazer">Refazer</string>
 </resources>
