--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="action_executar">Executar</string>
     <string name="action_refazer">Refazer</string>
     <string name="atividade_console">Console</string>
+    <string name="vazio" />
 </resources>
