Atividade abrir exemplo

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,10 +1,12 @@
 <resources>
     <string name="app_name">Portugol Online</string>
+    <string name="action_abrir_exemplo">Abrir exemplo</string>
     <string name="action_aumentar_fonte">Aumentar fonte</string>
     <string name="action_desfazer">Desfazer</string>
     <string name="action_diminuir_fonte">Diminuir fonte</string>
     <string name="action_executar">Executar</string>
     <string name="action_refazer">Refazer</string>
+    <string name="atividade_abrir_exemplo">Abrir exemplo</string>
     <string name="atividade_console">Console</string>
-    <string name="vazio" />
+    <string name="vazia" />
 </resources>
