--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -6,9 +6,21 @@
     <string name="action_diminuir_fonte">Diminuir fonte</string>
     <string name="action_executar">Executar</string>
     <string name="action_refazer">Refazer</string>
+    <string name="action_localizar_substituir">Localizar/substituir</string>
+    <string name="action_localizar_substituir_anterior">Anterior</string>
+    <string name="action_localizar_substituir_cancelar">Cancelar</string>
+    <string name="action_localizar_substituir_proximo">Próximo</string>
+    <string name="action_localizar_substituir_substituir">Substituir</string>
+    <string name="action_localizar_substituir_substituir_tudo">Substituir tudo</string>
     <string name="action_salvar">Salvar</string>
     <string name="armazenamento_interno">Armazenamento interno</string>
     <string name="atividade_abrir_exemplo">Abrir exemplo</string>
+    <string name="dialog_localizar_substituir_button_cancelar">Cancelar</string>
+    <string name="dialog_localizar_substituir_button_localizar">Localizar</string>
+    <string name="dialog_localizar_substituir_checkbox_diferenciar">Diferenciar maiúsculas de minúsculas</string>
+    <string name="dialog_localizar_substituir_checkbox_substituir">Substituir</string>
+    <string name="dialog_localizar_substituir_edit_text_localizar">Localizar</string>
+    <string name="dialog_localizar_substituir_edit_text_substituir_por">Substituir por</string>
     <string name="compartilhar_como_arquivo">Compartilhar algoritmo como arquivo</string>
     <string name="compartilhar_como_texto">Compartilhar algoritmo como texto</string>
     <string name="compartilhar_dialogo_titulo">Compartilhar como</string>
