Seleção de texto no editor - recortar, copiar, colar, selecionar tudo, compartilhar texto selecionado

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -5,14 +5,19 @@
     <string name="action_desfazer">Desfazer</string>
     <string name="action_diminuir_fonte">Diminuir fonte</string>
     <string name="action_executar">Executar</string>
-    <string name="action_refazer">Refazer</string>
     <string name="action_localizar_substituir">Localizar/substituir</string>
     <string name="action_localizar_substituir_anterior">Anterior</string>
     <string name="action_localizar_substituir_cancelar">Cancelar</string>
     <string name="action_localizar_substituir_proximo">Próximo</string>
     <string name="action_localizar_substituir_substituir">Substituir</string>
     <string name="action_localizar_substituir_substituir_tudo">Substituir tudo</string>
+    <string name="action_refazer">Refazer</string>
     <string name="action_salvar">Salvar</string>
+    <string name="action_selecao_colar">Colar</string>
+    <string name="action_selecao_compartilhar">Compartilhar</string>
+    <string name="action_selecao_copiar">Copiar</string>
+    <string name="action_selecao_recortar">Recortar</string>
+    <string name="action_selecao_selecionar_tudo">Selecionar tudo</string>
     <string name="ao_nao_encontrar">Sua pesquisa &lt;b>%1$s&lt;/b> não foi encontrada.</string>
     <string name="armazenamento_interno">Armazenamento interno</string>
     <string name="atividade_abrir_exemplo">Abrir exemplo</string>
